* disabled unused ui.

--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -46,13 +46,13 @@
   </section>
   <section>
     <h5>重现步骤</h5>
-    <div class="mui-content-padded obj-steps" data-default="<span class='small text-muted'>--- 没有描述 ---</span>">dfdsfdsfd</div>
+    <div class="mui-content-padded obj-steps" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
   <footer>
     <div class="mui-row">
-      <div class="mui-col-xs-4 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
-      <div class="mui-col-xs-4 mui-col mui-col-extra"><button class="mui-btn mui-btn-primary mui-btn-block">确认</button></div>
-      <div class="mui-col-xs-4 mui-col mui-col-extra"><button class="mui-btn mui-btn-success mui-btn-block">解决</button></div>
+      <div class="mui-col-xs-12 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
+<!--       <div class="mui-col-xs-4 mui-col mui-col-extra"><button class="mui-btn mui-btn-primary mui-btn-block">确认</button></div>
+      <div class="mui-col-xs-4 mui-col mui-col-extra"><button class="mui-btn mui-btn-success mui-btn-block">解决</button></div> -->
     </div>
   </footer>
 </div>
