--- a/zentao/story.html
+++ b/zentao/story.html
@@ -45,8 +45,8 @@
   </section>
   <footer>
     <div class="mui-row">
-      <div class="mui-col-xs-6 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
-      <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-primary mui-btn-block">评审</button></div>
+      <div class="mui-col-xs-12 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
+<!--       <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-primary mui-btn-block">评审</button></div> -->
     </div>
   </footer>
 </div>
