--- a/zentao/task.html
+++ b/zentao/task.html
@@ -44,8 +44,8 @@
   </section>
   <footer>
     <div class="mui-row">
-      <div class="mui-col-xs-6 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
-      <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div>
+      <div class="mui-col-xs-12 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
+<!--       <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div> -->
     </div>
   </footer>
 </div>
