--- a/zentao/login.html
+++ b/zentao/login.html
@@ -6,6 +6,39 @@
     <title>禅道</title>
     <link href="css/mui.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
+    <style>
+    #login
+    {
+      margin: auto;
+      background: #0475e1;
+    }
+    #login.show
+    {
+      display: flex;
+    }
+    #login > div
+    {
+      padding-bottom: 140px;
+      margin: auto;
+    }
+    #login .logo img
+    {
+      max-width: 100%;
+    }
+    #loginForm
+    {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    #loginForm > .mui-input-group
+    {
+      margin-bottom: 20px;
+    }
+    #loginForm .mui-btn-primary
+    {
+      background: #2694ff
+    }
+    </style>
 </head>
 <body>
   <div class="mui-content">
