--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -30,7 +30,7 @@
           <a class="mui-control-item mui-active" href="#today">今日 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-today"></span></a>
           <a class="mui-control-item" href="#yestoday">昨日 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-yestoday"></span></a>
           <a class="mui-control-item" href="#thisweek">本周 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-thisweek"></span></a>
-          <a class="mui-control-item" href="#lastweek">上周 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-lastweek"></span></a>
+          <a class="mui-control-item" href="#undone">未完成 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-undone"></span></a>
         </div>
         <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-3"></div>
       </div>
@@ -47,7 +47,7 @@
           <ul class="mui-table-view list-todos">
           </ul>
         </div>
-        <div id="lastweek" class="mui-slider-item mui-control-content">
+        <div id="undone" class="mui-slider-item mui-control-content">
           <ul class="mui-table-view list-todos">
           </ul>
         </div>
@@ -65,7 +65,7 @@
 <script src="js/webview.js"></script>
 <script src="js/listview.js"></script>
 <script>
-listView({type: 'todo', tabs: ['today', 'yestoday', 'thisweek', 'lastweek']});
+listView({type: 'todo', tabs: ['today', 'yestoday', 'thisweek', 'undone']});
 
 function show(tab, data)
 {
@@ -88,10 +88,14 @@ function show(tab, data)
     for(var group in groupedData)
     {
         data = groupedData[group];
-        item = document.createElement('li');
-        item.classList.add('mui-table-view-divider');
-        item.innerHTML = '<span class="mui-badge mui-badge-' + data[0]['statusColor'] + '">' + data[0]['statusName'] + ' (<strong>' + data.length + '</strong>)</span>';
-        $todos.appendChild(item);
+
+        if(tab != 'undone')
+        {
+            item = document.createElement('li');
+            item.classList.add('mui-table-view-divider');
+            item.innerHTML = '<span class="mui-badge mui-badge-' + data[0]['statusColor'] + '">' + data[0]['statusName'] + ' (<strong>' + data.length + '</strong>)</span>';
+            $todos.appendChild(item);
+        }
 
         data.forEach(function(val)
         {
@@ -107,7 +111,7 @@ function show(tab, data)
             }
             item.setAttribute('data-id', val.id);
             item.setAttribute('data-tab', tab);
-            var dateStr = '<span class="mui-badge' + (val.status === 'wait' && val.date < today ? ' mui-badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'lastweek' ? '上' + val.date.getDayName() + ' ' : '')) + val.begin + '</span>';
+            var dateStr = '<span class="mui-badge' + (val.status === 'wait' && val.date < today ? ' mui-badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'undone' ? val.date.format('MM月dd日') + ' ' : '')) + val.begin + '</span>';
             if(val.status === 'wait')
             {
               item.innerHTML = '<span class="list-title"><span class="mui-icon mui-icon-checkbox"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
