* show data list directly without group.

--- a/zentao/bugs.html
+++ b/zentao/bugs.html
@@ -76,34 +76,24 @@ function show(tab, data)
         $bugs.removeChild(child);
     }
 
-    var groupedData = data.groupBy('type'),
-        item;
-    for(var group in groupedData)
+    var item;
+    data.forEach(function(val)
     {
-        data = groupedData[group];
         item = document.createElement('li');
-        item.classList.add('mui-table-view-divider');
-        item.innerHTML = '<span class="mui-badge">' + data[0]['typeName'] + ' (<strong>' + data.length + '</strong>)</span>';
-        $bugs.appendChild(item);
-
-        data.forEach(function(val)
+        item.classList.add('mui-table-view-cell');
+        item.classList.add('pri');
+        item.classList.add('pri-' + val.pri);
+        item.classList.add('item-id-' + val.id);
+        if(val.unread)
         {
-            item = document.createElement('li');
-            item.classList.add('mui-table-view-cell');
-            item.classList.add('pri');
-            item.classList.add('pri-' + val.pri);
-            item.classList.add('item-id-' + val.id);
-            if(val.unread)
-            {
-                item.classList.add('unread');
-                unreadCount++;
-            }
-            item.setAttribute('data-id', val.id);
-            item.setAttribute('data-tab', tab);
-            item.innerHTML = '<span class="list-title"><span class="list-item-id">' + val.id + '</span>' + val.title + '</span>' + '<span class="mui-badge mui-badge-' + val.statusColor + '">' + val.statusName + '</span>';
-            $bugs.appendChild(item);
-        });
-    }
+            item.classList.add('unread');
+            unreadCount++;
+        }
+        item.setAttribute('data-id', val.id);
+        item.setAttribute('data-tab', tab);
+        item.innerHTML = '<span class="list-title"><span class="list-item-id">' + val.id + '</span>' + val.title + '</span>' + '<span class="mui-badge mui-badge-' + val.statusColor + '">' + val.statusName + '</span>';
+        $bugs.appendChild(item);
+    });
 
     updateTabBadge(tab, unreadCount);
 };
