--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -5,32 +5,31 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <title>禅道</title>
   <link href="css/mui.min.css" rel="stylesheet"/>
+  <link href="css/font-awesome.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <link href="css/dialog.css" rel="stylesheet"/>
   <style>
+
   </style>
 </head>
 <body ng-controller="DialogController">
 <div class="dialog with-footer" id="dialog">
   <header class="pri">
-    <div class="pri-icon" id="priIcon" class="pri"><span class="obj-pri"></span></div>
-    <div class='dialog-title'>
-      <div class="dialog-title-left"><span class="obj-id item-id pri" id="objID">&nbsp;</span></div>
-      <div class="dialog-title-center"><h4><span class="obj-title"></span></h4></div>
-      <div class="dialog-title-right"><div class="mui-badge" id="objStatus"></div></div>
-    </div>
+    <h4><span class="obj-id item-id pri" id="objID">&nbsp;</span> <span class="obj-title">&nbsp;</span></h4>
     <div class="info">
+      <div class="mui-pull-right small"><i class="fa fa-chevron-down text-muted info-more-icon"></i></div>
       <div class="block-lines">
-        <div class="small"><span class="text-muted">Bug类型: </span><strong class="obj-typeName"></strong></div>
-        <div class="small"><span class="text-muted">严重程度: </span><strong class="obj-severity"></strong></div>
-        <div class="small"><span class="text-muted">是否确认: </span><strong class="obj-confirm" id="objConfirm"></strong></div>
+        <div><span class="mui-badge" id="objStatus">&nbsp;</span></div>
+        <div class="small"><span class="text-muted"><i class="fa fa-hand-o-right"></i> </span><span class="obj-assignedTo"></span></div>
       </div>
-      <div class="block-lines">
-        <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-format="MM月dd日hh:mm"></strong></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
-        <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-format="MM月dd日hh:mm"></strong></div>
-      </div>
-      
+    </div>
+    <div class="info info-more">
+      <div class="small"><span class="text-muted">类型: </span><span class="obj-typeName"></span></div>
+      <div class="small"><span class="text-muted">严重程度: </span><strong class="obj-severity"></strong></div>
+      <div class="small"><span class="text-muted">是否确认: </span><strong class="obj-confirm" id="objConfirm"></strong></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-format="MM月dd日hh:mm"></strong></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
+      <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-format="MM月dd日hh:mm"></strong></div>
     </div>
   </header>
   <section>
@@ -107,7 +106,6 @@ function render(obj)
     }
 
     $("#dialog > header").classList.add('pri-' + obj.pri);
-    $("#priIcon").classList.add('pri-' + obj.pri);
     $("#objID").classList.add('pri-' + obj.pri);
     var $status = $('#objStatus');
     $status.innerHTML = obj.statusName;
