--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -9,11 +9,8 @@
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <link href="css/dialog.css" rel="stylesheet"/>
-  <style>
-
-  </style>
 </head>
-<body ng-controller="DialogController">
+<body>
 <div class="dialog with-footer" id="dialog">
   <header class="pri">
     <h4><span class="obj-id item-id pri" id="objID">&nbsp;</span> <span class="obj-title">&nbsp;</span></h4>
@@ -26,28 +23,17 @@
     </div>
     <div class="info info-more">
       <div class="small"><span class="text-muted">类型: </span><span class="obj-typeName"></span></div>
+      <div class="small"><span class="text-muted">操作系统: </span><span class="obj-browser"></span></div>
+      <div class="small"><span class="text-muted">浏览器: </span><span class="obj-os"></span></div>
       <div class="small"><span class="text-muted">严重程度: </span><strong class="obj-severity"></strong></div>
-      <div class="small"><span class="text-muted">是否确认: </span><strong class="obj-confirm" id="objConfirm"></strong></div>
-      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-format="MM月dd日hh:mm"></strong></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
-      <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-format="MM月dd日hh:mm"></strong></div>
+      <div class="small"><span class="text-muted">是否确认: </span><span class="obj-confirm" id="objConfirm"></span></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-format="MM月dd日hh:mm"></span></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
+      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-format="MM月dd日hh:mm"></span></div>
     </div>
   </header>
   <section>
-    <h5>用户环境</h5>
-    <table class="mui-table table-info">
-      <tr>
-        <th>操作系统</th>
-        <td class="obj-os" data-default="未指定"></td>
-      </tr>
-      <tr>
-        <th>浏览器</th>
-        <td class="obj-browser" data-default="未指定"></td>
-      </tr>
-    </table>
-  </section>
-  <section>
-    <h5>重现步骤</h5>
-    <div class="mui-content-padded obj-steps" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <h5><i class="fa fa-th-list"></i> 重现步骤</h5>
+    <div class="mui-content-padded obj-steps article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
   <footer>
     <div class="mui-row">
