--- a/zentao/task.html
+++ b/zentao/task.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <title>禅道</title>
   <link href="css/mui.min.css" rel="stylesheet"/>
+  <link href="css/font-awesome.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <link href="css/dialog.css" rel="stylesheet"/>
   <style>
-    .dialog > header > div {padding-left: 30px; position: relative;}
-    #objStatus {position: absolute; right: 0; top: 4px; margin: 0}
     #timeBar {background: #fafafa; border-bottom: 1px solid #e5e5e5; position: relative; height: 25px; background-color: #86c0ff}
     #timeBar.beyond {background-color: #f37e7a}
     #timeBarLabel {padding: 2px 10px; position: absolute; left: 0; top: 0; bottom: 0; right: 0; z-index: 10}
@@ -19,18 +18,22 @@
     #timeBarConsumed {background-color: #5ee174;}
   </style>
 </head>
-<body ng-controller="DialogController">
+<body>
 <div class="dialog with-footer" id="dialog">
   <header class="pri">
-    <div class="pri-icon" id="priIcon" class="pri"><span class="obj-pri"></span></div>
-    <h3><span class="obj-id item-id pri" id="objID"></span> <span class="obj-name"></span></h3>
+    <h4><span class="obj-id item-id pri" id="objID"></span> <span class="obj-name"></span></h4>
     <div class="info">
-      <div class="small text-muted">所属项目：<strong class="obj-projectName"></strong></div>
+      <div class="mui-pull-right small"><i class="fa fa-chevron-down text-muted info-more-icon"></i></div>
       <div class="block-lines">
-        <div class="small"><strong>#<span class="obj-typeName"></span></strong> &nbsp;<span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-format="MM月dd日hh:mm"></strong></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
-        <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-format="MM月dd日hh:mm"></strong></div>
+        <div><span class="mui-badge" id="objStatus">&nbsp;</span></div>
+        <div class="small"><span class="text-muted"><i class="fa fa-hand-o-right"></i> </span><span class="obj-assignedTo" data-default="[未指派]"></span></div>
       </div>
-      <div class="mui-badge" id="objStatus"></div>
+    </div>
+    <div class="info info-more">
+      <div class="small"><span class="text-muted">所属项目: </span><span class="obj-projectName"></span></div>
+      <div class="small"><span class="text-muted">类型: </span><span class="obj-typeName"></span></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-format="MM月dd日hh:mm"></span></span></div>
+      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-format="MM月dd日hh:mm"></span></div>
     </div>
   </header>
   <section id="timeBar">
@@ -40,7 +43,7 @@
   </section>
   <section>
     <h5>描述</h5>
-    <div class="mui-content-padded obj-desc" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="mui-content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
   <footer>
     <div class="mui-row">
@@ -49,7 +52,6 @@
     </div>
   </footer>
 </div>
-<!-- <script src="js/angular/angular.min.js"></script> -->
 <script src="js/core.js"></script>
 <script src="js/$.js"></script>
 <script src="js/console.js"></script>
@@ -69,6 +71,7 @@ zentao.ready(function()
     $('#idid').innerHTML = options.id;
 
     var obj = zentao.data[options.type].getById(options.id);
+    console.log(obj);
     render(obj);
 });
 
@@ -99,13 +102,11 @@ function render(obj)
     }
 
     $("#dialog > header").classList.add('pri-' + obj.pri);
-    $("#priIcon").classList.add('pri-' + obj.pri);
     $("#objID").classList.add('pri-' + obj.pri);
     var $status = $('#objStatus');
     $status.innerHTML = obj.statusName;
     $status.classList.add('mui-badge-' + obj.statusColor);
     $("#assignedTo").classList[obj.assignedTo ? 'remove' : 'add']('mui-hidden');
-    $('#noAssignedTo').classList[obj.assignedTo ? 'add' : 'remove']('mui-hidden');
 
     // time bar
     var $timebar = $('#timeBar'),
@@ -114,8 +115,6 @@ function render(obj)
     $('#timeBarEstimate').style.width = (obj.estimate/maxTime)*100 + '%';
     $('#timeBarConsumed').style.width = (obj.consumed/maxTime)*100 + '%';
 }
-
-var assignedDate = new Date(Date.parse("Fri Aug 01 2014 11:16:40 GMT+0800 (CST)"));
 </script>
 </body>
 </html>
