--- a/zentao/setting/index.html
+++ b/zentao/setting/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>禅道</title>
     <link href="../css/mui.min.css" rel="stylesheet"/>
+    <link href="../css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../css/subpage.css" rel="stylesheet"/>
     <style>
     #syncIntervalDialog {padding-top: 44px; left: 100%; transition: all 0.15s;}
     #syncIntervalDialog.show.in {left: 0}
@@ -13,8 +15,7 @@
 </head>
 <body>
   <header class="mui-bar mui-bar-nav">
-    <a class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back"></a>
-    <h1 class="mui-title">设置</h1>
+    <h1 class="mui-title mui-action-back"><i class="fa fa-angle-left"></i> 设置</h1>
   </header>
   <div class="mui-content">
     <h5 style="padding: 8px 10px 2px">帐号</h5>
