--- a/zentao/task.html
+++ b/zentao/task.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>禅道</title>
+  <title>禅道任务</title>
   <link href="css/mui.min.css" rel="stylesheet"/>
   <link href="css/font-awesome.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
@@ -19,7 +19,10 @@
   </style>
 </head>
 <body>
-<div class="dialog with-footer" id="dialog">
+<header class="mui-bar headbar mui-bar-nav">
+  <h1 class="mui-title mui-action-back"><i class="fa fa-angle-left"></i> 任务</h1>
+</header>
+<div class="dialog" id="dialog">
   <header class="pri">
     <h4><span class="obj-id item-id pri" id="objID"></span> <span class="obj-name"></span></h4>
     <div class="info">
@@ -45,12 +48,6 @@
     <h5>描述</h5>
     <div class="mui-content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
-  <footer>
-    <div class="mui-row">
-      <div class="mui-col-xs-12 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back mui-action-back">返回</button></div>
-<!--       <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div> -->
-    </div>
-  </footer>
 </div>
 <script src="js/core.js"></script>
 <script src="js/$.js"></script>
