--- a/zentao/login.html
+++ b/zentao/login.html
@@ -4,141 +4,116 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>禅道</title>
-    <link href="css/mui.min.css" rel="stylesheet"/>
+    <link href="css/zui.m.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
     <style>
     #login
     {
       margin: auto;
       background: #0475e1;
-    }
-    #login.show
-    {
-      display: flex;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
     }
     #login > div
     {
-      padding-bottom: 140px;
-      margin: auto;
+      position: relative;
+      height: 500px;
+      margin: 0 auto;
+      top: 50%;
+      margin-top: -250px;
+    }
+    @media (max-height: 600px) {
+      #login > div
+      {
+        position: relative;
+        height: 400px;
+        margin: 0 auto;
+        top: 50%;
+        margin-top: -200px;
+      }
     }
     #login .logo img
     {
-      max-width: 100%;
+      display: block;
+      max-width: 300px;
+      width: 80%;
+      margin: 30px auto;
     }
     #loginForm
     {
       max-width: 400px;
       margin: 0 auto;
     }
-    #loginForm > .mui-input-group
+    #loginForm > .input-group
     {
       margin-bottom: 20px;
     }
-    #loginForm .mui-btn-primary
+    #loginForm .btn-primary
     {
       background: #2694ff
+    }
+    #backBtn, #tipButton
+    {
+      position: absolute;
+      bottom: 0;
+      max-width: 400px;
+      background: rgba(0,0,0,0.15);
+      border: rgba(0,0,0,0.25);
+      color: #fff;
+    }
+    .hidden {display: none!important}
+    #tipButton
+    {
+        background: none;
+        font-size: 15px;
+        opacity: 0.7;
     }
     </style>
 </head>
 <body>
-  <div class="mui-content">
-    <section id="login" class="content-view with-padding full show">
+  <div class="content">
+    <section id="login" class="content-view with-padding show full">
       <div>
         <div class="logo">
-          <img src="img/bg-zentao.png" alt="">
+          <img src="img/zentao-banner.inverse.png" alt="">
         </div>
         <div id="loginForm">
-          <div class="mui-input-group">
-             <input class="mui-input-clear" id="address" type="url" placeholder="禅道地址(例如：http://zentao.com)">
+          <div class="input-group">
+             <input class="input-clear" id="address" type="url" placeholder="禅道地址，如：zentao.com">
             <input id="username" type="text" placeholder="用户名/注册邮箱">
             <input id="password" type="password" placeholder="密码">
           </div>
-          <button id="loginBtn" type="button" class="mui-btn mui-btn-primary mui-btn-block">登录</button>
-          <button id="backBtn" type="button" class="mui-btn mui-btn-block mui-hidden mui-action-back">离线使用</button>
+          <button id="loginBtn" type="button" class="btn btn-primary btn-block">登录</button>
+          <button id="backBtn" type="button" class="btn btn-block action-back hidden">离线使用 <i class="icon icon-arrow-right"></i></button>
+          <button id="tipButton" type="button" class="btn btn-block action-back">0.1.1 beta</button>
         </div>
       </div>
     </section>
   </div>
 
-<script src="js/core.js"></script>
-<script src="js/$.js"></script>
-<script src="js/console.js"></script>
-<script src="js/store.js"></script>
-<script src="js/md5.min.js"></script>
-<script src="js/mui.js"></script>
-<script src="js/zentao.js"></script>
-<script src="js/webview.js"></script>
+<script src="js/lib/zui.m.js"></script>
 <script>
-zentao.on('ready', function()
+window.plusReady(function()
 {
-    var wv = plus.webview.currentWebview();
-    if(window.user && window.user.status != 'logout')
+    var view = plus.webview.currentWebview();
+    var parentView = view.parent();
+    var options = view.options || {};
+    var username = document.getElementById('username');
+    var password = document.getElementById('password');
+    var address  = document.getElementById('address');
+    var loginBtn = document.getElementById('loginBtn');
+
+    if(options.offline)
     {
-        $('#backBtn').classList.remove('mui-hidden');
+        document.getElementById('tipButton').classList.add('hidden');
+        document.getElementById('backBtn').classList.remove('hidden');
     }
-    else if(window.user && window.user.status == 'online')
-    {
-        window.plus.nativeUI.toast('已登录。');
-        wv.close('zoom-out', 200);
-    }
 
-    handleLoginView(wv);
-});
-
-function handleLoginView(wv)
-{
-    var username = $('#username');
-    var password = $('#password');
-    var pwdMd5;
-    var address = $('#address');
-    var loginBtn = $('#loginBtn');
-
-    var tryLogin = function()
-    {
-        if (address.value === '')
-        {
-            alert('请输入禅道地址，包含“http://”。');
-            return;
-        }
-        else if (username.value === '')
-        {
-            alert('请输入用户名或者注册邮箱。');
-            return;
-        }
-        else if (password.value === '')
-        {
-            alert('请输入密码。');
-            return;
-        }
-
-        loginBtn.disabled = 'disabled';
-        loginBtn.innerHTML = '正在登录...';
-
-        zentao.login(
-        {
-            account : username.value,
-            pwdMd5  : window.md5(password.value),
-            url     : address.value
-        }, function()
-        {
-            loginBtn.disabled = false;
-            loginBtn.innerHTML = '登录';
-            window.plus.nativeUI.toast('登录成功');
-            consolelog('登录成功。', 'bgsuccess|h5');
-
-            wv.close('zoom-out', 200);
-        }, function(response)
-        {
-            loginBtn.disabled = false;
-            loginBtn.innerHTML = '登录';
-            alert((response ? response.message : '登录失败。'));
-        });
-
-        return false;
-    };
-
-    if (window.user.account) username.value = window.user.account;
-    if (window.user.url) address.value      = window.user.url;
+    if (options.account) username.value = options.account;
+    if (options.url) address.value      = options.url;
 
     address.on('focus', function()
     {
@@ -154,11 +129,57 @@ function handleLoginView(wv)
         }
     });
 
-    $('#loginBtn').on('click', function()
+    window.on('logged', function(e)
     {
-        tryLogin();
+        loginBtn.disabled = false;
+        loginBtn.innerHTML = '登录';
+
+        var result = e.data;
+        if(result.result)
+        {
+            loginBtn.innerHTML = '已登录';
+            window.plus.nativeUI.toast('登录成功');
+            view.close('zoom-out', 200);
+        }
+        else
+        {
+            loginBtn.disabled = false;
+            loginBtn.innerHTML = '登录';
+            alert(result.message || '登录失败，请检查网络连接。');
+        }
     });
-}
+
+    loginBtn.on('click', function()
+    {
+        if (address.value === '')
+        {
+            alert('请输入禅道地址，如：www.zentao.com。');
+            return false;
+        }
+        else if (username.value === '')
+        {
+            alert('请输入用户名或者注册邮箱。');
+            return false;
+        }
+        else if (password.value === '')
+        {
+            alert('请输入密码。');
+            return false;
+        }
+
+        loginBtn.disabled = 'disabled';
+        loginBtn.innerHTML = '登录中...';
+
+        window.fire(parentView, 'login',
+        {
+            account : username.value,
+            pwdMd5  : password.value,
+            url     : address.value,
+            ui      : true
+        });
+        return false;
+    });
+});
 </script>
 </body>
 </html>
