--- a/zentao/login.html
+++ b/zentao/login.html
@@ -88,7 +88,7 @@
           </div>
           <button id="loginBtn" type="button" class="btn btn-primary btn-block">登录</button>
           <button id="backBtn" type="button" class="btn btn-block action-back hidden">离线使用 <i class="icon icon-arrow-right"></i></button>
-          <button id="tipButton" type="button" class="btn btn-block action-back">0.1.1 beta</button>
+          <button id="tipButton" type="button" class="btn btn-block action-back">0.2 BETA</button>
         </div>
       </div>
     </section>
