* fixed errors of index view.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -49,7 +49,7 @@
     <h1 class="title">禅道 <span id="userStatusName">连接中…</span></h1>
   </header>
 
-  <nav class="bar bar-tab" id="subpageNav">
+  <nav class="bar bar-tab" id="listviewNav">
     <a class="tab-item open-listview active" href="#todo" data-id="todo" id="tab-todo">
       <span class="icon"><i class="icon icon-check-square-o"></i></span>
       <span class="tab-label">待办</span>
