--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -4,74 +4,71 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <title>禅道待办</title>
-  <link href="css/mui.min.css" rel="stylesheet"/>
+  <link href="css/zui.m.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <style>
   body {height: 100%; background: #EFEFF4;}
-  .mui-content {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}
-  .mui-content > .mui-slider {min-height: 100%;}
-  .mui-table-view-cell .mui-icon {opacity: 0.5}
-  .mui-table-view-cell.mui-active .mui-icon {opacity: 0.95}
-  .mui-table-view.list-todos-done .mui-table-view-cell {color: #999}
-  .list-todos-wait .mui-table-view-divider .mui-badge {background: #DD524D; color: #fff;}
-  .list-todos-done .mui-table-view-divider .mui-badge {background: #4CD964; color: #fff;}
-  .dialog.todo-done .dialog-footer .mui-col-extra {display: none}
-  .dialog.todo-done .dialog-footer .mui-col {width: 100%}
+  .content {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}
+  .content > .slider {min-height: 100%;}
 
-  .mui-table-view-cell > .list-title {padding-right: 90px;}
+  .table-view {border-top: none}
+  .table-view:empty {display: none}
+
+  .table-view-cell .icon {opacity: 0.5}
+  .table-view-cell.active .icon {opacity: 0.95}
+  .table-view.list-todos-done .table-view-cell {color: #999}
+  .list-todos-wait .table-view-divider .badge {background: #DD524D; color: #fff;}
+  .list-todos-done .table-view-divider .badge {background: #4CD964; color: #fff;}
+  .dialog.todo-done .dialog-footer .col-extra {display: none}
+  .dialog.todo-done .dialog-footer .col {width: 100%}
+
+  .table-view-cell > .list-title {padding-right: 90px;}
+  .slider {background: none}
   </style>
 </head>
 <body>
-<div class="mui-content">
-  <div id="slider" class="mui-slider">
-      <div id="sliderHeader" class="mui-slider-header">
-        <div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-          <a class="mui-control-item mui-active" href="#today">今日 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-today"></span></a>
-          <a class="mui-control-item" href="#yestoday">昨日 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-yestoday"></span></a>
-          <a class="mui-control-item" href="#thisweek">本周 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-thisweek"></span></a>
-          <a class="mui-control-item" href="#undone">未完成 <span class="mui-badge mui-badge-danger mui-hidden tab-badge-undone"></span></a>
+<div class="content">
+  <div class="slider">
+      <div class="slider-header">
+        <div class="slider-indicator segmented-control segmented-control-inverted" id="listviewNav">
+          <a class="control-item active" href="#today">今日 <span class="badge badge-danger hidden tab-badge-today"></span></a>
+          <a class="control-item" href="#yestoday">昨日 <span class="badge badge-danger hidden tab-badge-yestoday"></span></a>
+          <a class="control-item" href="#thisweek">本周 <span class="badge badge-danger hidden tab-badge-thisweek"></span></a>
+          <a class="control-item" href="#undone">未完成 <span class="badge badge-danger hidden tab-badge-undone"></span></a>
         </div>
-        <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-3"></div>
+        <div class="slider-progress-bar col-xs-3"></div>
       </div>
-      <div class="mui-slider-group" id="todoList">
-        <div id="today" class="mui-slider-item mui-control-content mui-active">
-          <ul class="mui-table-view list-todos">
+      <div class="slider-group" id="listview">
+        <div id="today" class="slider control-content active">
+          <ul class="table-view listview-list">
           </ul>
         </div>
-        <div id="yestoday" class="mui-slider-item mui-control-content">
-          <ul class="mui-table-view list-todos">
+        <div id="yestoday" class="slider control-content">
+          <ul class="table-view listview-list">
           </ul>
         </div>
-        <div id="thisweek" class="mui-slider-item mui-control-content">
-          <ul class="mui-table-view list-todos">
+        <div id="thisweek" class="slider control-content">
+          <ul class="table-view listview-list">
           </ul>
         </div>
-        <div id="undone" class="mui-slider-item mui-control-content">
-          <ul class="mui-table-view list-todos">
+        <div id="undone" class="slider control-content">
+          <ul class="table-view listview-list">
           </ul>
         </div>
       </div>
   </div>
 </div>
 
-<script src="js/core.js"></script>
-<script src="js/$.js"></script>
-<script src="js/console.js"></script>
-<script src="js/store.js"></script>
-<script src="js/md5.min.js"></script>
-<script src="js/mui.js"></script>
-<script src="js/zentao.js"></script>
+<script src="js/lib/zui.m.js"></script>
 <script src="js/webview.js"></script>
+<script src="js/userdata.js"></script>
 <script src="js/listview.js"></script>
 <script>
-listView({type: 'todo', tabs: ['today', 'yestoday', 'thisweek', 'undone']});
-
-function show(tab, data)
+var listview = new ListView('todo', function(tab, data)
 {
-    data = data || zentao.filterData('todo', tab);
-    var $tab        = $('#' + tab),
-        $todos      = $('#' + tab + ' .list-todos'),
+    var $tab        = document.getElementById(tab),
+        $todos      = document.getElementsByClassName('listview-list'),
         unreadCount = 0,
         waitCount   = 0,
         doneCount   = 0,
@@ -92,15 +89,15 @@ function show(tab, data)
         if(tab != 'undone')
         {
             item = document.createElement('li');
-            item.classList.add('mui-table-view-divider');
-            item.innerHTML = '<span class="mui-badge mui-badge-inverted mui-badge-' + data[0]['statusColor'] + '">' + data[0]['statusName'] + ' (<strong>' + data.length + '</strong>)</span>';
+            item.classList.add('table-view-divider');
+            item.innerHTML = '<span class="badge badge-inverted badge-' + data[0]['statusColor'] + '">' + data[0]['statusName'] + ' (<strong>' + data.length + '</strong>)</span>';
             $todos.appendChild(item);
         }
 
         data.forEach(function(val)
         {
             var item = document.createElement('li');
-            item.classList.add('mui-table-view-cell');
+            item.classList.add('table-view-cell');
             item.classList.add('pri');
             item.classList.add('pri-' + val.pri);
             item.classList.add('item-id-' + val.id);
@@ -111,23 +108,23 @@ function show(tab, data)
             }
             item.setAttribute('data-id', val.id);
             item.setAttribute('data-tab', tab);
-            var dateStr = '<span class="mui-badge' + (val.status === 'wait' && val.date < today ? ' mui-badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'undone' ? val.date.format('MM月dd日') + ' ' : '')) + val.begin + '</span>';
+            var dateStr = '<span class="badge' + (val.status === 'wait' && val.date < today ? ' badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'undone' ? val.date.format('MM月dd日') + ' ' : '')) + val.begin + '</span>';
             if(val.status === 'wait')
             {
-              item.innerHTML = '<span class="list-title"><span class="mui-icon mui-icon-checkbox"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
+              item.innerHTML = '<span class="list-title"><span class="icon icon-checkbox"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
                 waitCount++;
             }
             else
             {
-              item.innerHTML = '<span class="list-title"><span class="mui-icon mui-icon-checkbox-checked"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
+              item.innerHTML = '<span class="list-title"><span class="icon icon-checkbox-checked"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
                 doneCount++;
             }
             $todos.appendChild(item);
         });
     }
 
-    updateTabBadge(tab, unreadCount);
-};
+    this.updateTabBadge(tab, unreadCount);
+});
 </script>
 </body>
 </html>
