* fixed errors in listview and ajusted ui to todos list.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -70,6 +70,7 @@
 
 <script src="js/lib/md5.min.js"></script>
 <script src="js/lib/zui.m.js"></script>
+<script src="js/userdata.js"></script>
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
 <script src="js/app.js"></script>
