--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -8,15 +8,15 @@
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <style>
-  body {height: 100%; background: #EFEFF4;}
-  .content {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}
-  .content > .slider {min-height: 100%;}
+  body {background: #EFEFF4;}
 
   .table-view {border-top: none}
   .table-view:empty {display: none}
 
-  .table-view-cell .icon {opacity: 0.5}
-  .table-view-cell.active .icon {opacity: 0.95}
+  .table-view-cell .icon {opacity: 0.5; display: inline-block; height: 20px; width: 20px; position: relative; top: 4px; left: -3px; border: 1px solid #666; border-radius: 10px;}
+  .table-view-cell.done .list-title-name {opacity: 0.8}
+  .table-view-cell.done .icon {opacity: 0.75; border-color: #5cb85c; color: #5cb85c; top: 0px}
+  .table-view-cell.active .icon {opacity: 0.75;}
   .table-view.list-todos-done .table-view-cell {color: #999}
   .list-todos-wait .table-view-divider .badge {background: #DD524D; color: #fff;}
   .list-todos-done .table-view-divider .badge {background: #4CD964; color: #fff;}
@@ -32,10 +32,10 @@
   <div class="slider">
       <div class="slider-header">
         <div class="slider-indicator segmented-control segmented-control-inverted" id="listviewNav">
-          <a class="control-item active" href="#today">今日 <span class="badge badge-danger hidden tab-badge-today"></span></a>
-          <a class="control-item" href="#yestoday">昨日 <span class="badge badge-danger hidden tab-badge-yestoday"></span></a>
-          <a class="control-item" href="#thisweek">本周 <span class="badge badge-danger hidden tab-badge-thisweek"></span></a>
-          <a class="control-item" href="#undone">未完成 <span class="badge badge-danger hidden tab-badge-undone"></span></a>
+          <a class="control-item active" href="#today">今日 <span class="badge badge-danger hidden" id="tab-badge-today"></span></a>
+          <a class="control-item" href="#yestoday">昨日 <span class="badge badge-danger hidden" id="tab-badge-yestoday"></span></a>
+          <a class="control-item" href="#thisweek">本周 <span class="badge badge-danger hidden" id="tab-badge-thisweek"></span></a>
+          <a class="control-item" href="#undone">未完成 <span class="badge badge-danger hidden" id="tab-badge-undone"></span></a>
         </div>
         <div class="slider-progress-bar col-xs-3"></div>
       </div>
@@ -67,12 +67,14 @@
 <script>
 var listview = new ListView('todo', function(tab, data)
 {
-    var $tab        = document.getElementById(tab),
-        $todos      = document.getElementsByClassName('listview-list'),
+    var $tab        = document.$id(tab);
+    var $todos      = $tab.$('.listview-list'),
         unreadCount = 0,
         waitCount   = 0,
         doneCount   = 0,
         today       = Date.parseName('today');
+
+    console.log($todos);
 
     for(var i = $todos.childNodes.length - 1; i >= 0; i--)
     {
@@ -111,12 +113,13 @@ var listview = new ListView('todo', function(tab, data)
             var dateStr = '<span class="badge' + (val.status === 'wait' && val.date < today ? ' badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'undone' ? val.date.format('MM月dd日') + ' ' : '')) + val.begin + '</span>';
             if(val.status === 'wait')
             {
-              item.innerHTML = '<span class="list-title"><span class="icon icon-checkbox"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
+              item.innerHTML = '<span class="list-title"><span class="icon"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
                 waitCount++;
             }
             else
             {
-              item.innerHTML = '<span class="list-title"><span class="icon icon-checkbox-checked"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
+              item.classList.add('done');
+              item.innerHTML = '<span class="list-title"><span class="icon icon-check"></span> <span class="list-title-name">' + val.name + '</span></span>' + dateStr;
                 doneCount++;
             }
             $todos.appendChild(item);
